--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -246,7 +246,8 @@ jobs:
     strategy:
       max-parallel: 5
       matrix:
-        test_suite: ["cuda", "cuda_op", "cpu", "xla", "cuda_eager", "cpu_eager"]
+        test_suite:
+          ["cuda", "cuda_op", "cpu", "xla", "cuda_op_eager", "cpu_op_eager"]
         include:
           - test_suite: "cuda"
             os: [self-hosted, linux, gpu]
@@ -256,7 +257,7 @@ jobs:
             os: [self-hosted, linux, gpu]
             allow_fail: false
             build_env: build.cuda.env
-          - test_suite: "cuda_eager"
+          - test_suite: "cuda_op_eager"
             os: [self-hosted, linux, gpu]
             allow_fail: true
             build_env: build.cuda.env
@@ -264,7 +265,7 @@ jobs:
             os: [self-hosted, linux, cpu]
             allow_fail: false
             build_env: build.cpu.env
-          - test_suite: "cpu_eager"
+          - test_suite: "cpu_op_eager"
             os: [self-hosted, linux, cpu]
             allow_fail: true
             build_env: build.cpu.env
@@ -312,11 +313,13 @@ jobs:
           if [ "$test_suite" == "cuda" ]; then
             echo "bin_dir=${PWD}/bin_tmp" >> $GITHUB_ENV
           fi
-          if [ "$test_suite" == "cpu" ] || [ "$test_suite" == "cpu_eager" ]; then
+          if [ "$test_suite" == "cpu" ] || [ "$test_suite" == "cpu_op_eager" ]; then
             extra_docker_args+=" --env ONEFLOW_TEST_CPU_ONLY=1"
             extra_docker_args+=" --env CUDA_VISIBLE_DEVICES=''"
           fi
-
+          if [ "$test_suite" == "cuda_op_eager" ] || [ "$test_suite" == "cpu_op_eager" ]; then
+            extra_docker_args+=" --env ONEFLOW_TEST_ENABLE_EAGER=1"
+          fi
           # set container_name
           container_name=pr-${{ github.event.pull_request.number }}-run-id-${{ github.run_id }}-${test_suite}-test
           extra_docker_args+=" --name ${container_name}"
@@ -365,19 +368,10 @@ jobs:
             oneflow-test:$USER \
             bash -c "bash ci/test/try_install.sh && bash ci/test/dry_run_test.sh"
       - name: Op test
-        if: matrix.test_suite == 'cpu' || matrix.test_suite == 'cuda_op'
+        if: matrix.test_suite == 'cpu' || matrix.test_suite == 'cuda_op' || matrix.test_suite == 'cpu_op_eager' || matrix.test_suite == 'cuda_op_eager'
         run: |
           docker run \
             $extra_docker_args \
-            oneflow-test:$USER \
-            bash -c "bash ci/test/try_install.sh && bash ci/test/1node_op_test.sh"
-      - name: Op test (eager)
-        if: matrix.test_suite == 'cpu_eager' || matrix.test_suite == 'cuda_eager'
-        run: |
-          set -x
-          docker run \
-            $extra_docker_args \
-            --env ONEFLOW_TEST_ENABLE_EAGER=1 \
             oneflow-test:$USER \
             bash -c "bash ci/test/try_install.sh && bash ci/test/1node_op_test.sh"
       - name: Model test
