check in cmake changes and readme changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,14 @@
 # Minimum CMake required
 cmake_minimum_required(VERSION 3.14.0)
 
+string(TOUPPER "${CMAKE_BUILD_TYPE}" uppercase_CMAKE_BUILD_TYPE)
+if(NOT uppercase_CMAKE_BUILD_TYPE MATCHES "^(DEBUG|RELEASE|RELWITHDEBINFO|MINSIZEREL)$")
+    set(CMAKE_BUILD_TYPE "Release")
+endif()
+message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 option(THIRD_PARTY "Build third party" ON)
 option(ONEFLOW "Build oneflow" ON)
 
