--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -247,7 +247,7 @@ jobs:
       max-parallel: 5
       matrix:
         test_suite:
-          ["cuda", "cuda_op", "cuda_eager", "cpu", "xla", "cuda_op_eager", "cpu_op_eager"]
+          ["cuda", "cuda_op", "cuda_new_interface", "cpu", "xla", "cuda_op_eager", "cpu_op_eager"]
         include:
           - test_suite: "cuda"
             os: [self-hosted, linux, gpu]
@@ -257,7 +257,7 @@ jobs:
             os: [self-hosted, linux, gpu]
             allow_fail: false
             build_env: build.cuda.env
-          - test_suite: "cuda_eager"
+          - test_suite: "cuda_new_interface"
             os: [self-hosted, linux, gpu]
             allow_fail: false
             build_env: build.cuda.env
@@ -322,7 +322,7 @@ jobs:
             extra_docker_args+=" --env ONEFLOW_TEST_CPU_ONLY=1"
             extra_docker_args+=" --env CUDA_VISIBLE_DEVICES=''"
           fi
-          if [ "$test_suite" == "cuda_op_eager" ] || [ "$test_suite" == "cpu_op_eager" ] || [ "$test_suite" == "cuda_eager" ]; then
+          if [ "$test_suite" == "cuda_op_eager" ] || [ "$test_suite" == "cpu_op_eager" ] || [ "$test_suite" == "cuda_new_interface" ]; then
             extra_docker_args+=" --env ONEFLOW_TEST_ENABLE_EAGER=1"
           fi
           # set container_name
@@ -373,7 +373,7 @@ jobs:
             oneflow-test:$USER \
             bash -c "bash ci/test/try_install.sh && bash ci/test/dry_run_test.sh"
       - name: Module API test
-        if: matrix.test_suite == 'cuda_eager'
+        if: matrix.test_suite == 'cuda_new_interface'
         run: |
           docker run \
             $extra_docker_args \
@@ -381,7 +381,7 @@ jobs:
             oneflow-test:$USER \
             bash -c "bash ci/test/try_install.sh && bash ci/test/1node_test.sh"
       - name: Tensor API test
-        if: matrix.test_suite == 'cuda_eager'
+        if: matrix.test_suite == 'cuda_new_interface'
         run: |
           docker run \
             $extra_docker_args \
