--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -347,11 +347,9 @@ jobs:
       - name: Op test (distributed)
         if: matrix.test_suite == 'cuda'
         run: |
-          python3 ci/test/distributed_run.py --make_dotssh
           python3 ci/test/distributed_run.py --run --bash_script=ci/test/2node_op_test.sh \
             --build_docker_img \
-            --oneflow_wheel_path=${wheelhouse_dir} \
-            --oneflow_worker_bin=${bin_dir}/oneflow_worker
+            --oneflow_wheel_path=${wheelhouse_dir}
       - name: Print backtrace (distributed test)
         if: always() && matrix.test_suite == 'cuda'
         run: |
