--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -347,7 +347,8 @@ jobs:
       - name: Op test (distributed)
         if: matrix.test_suite == 'cuda'
         run: |
-          python3 ci/test/distributed_run.py --run --bash_script=ci/test/2node_op_test.sh \
+          python3 ci/test/distributed_run.py \
+            --bash_script=ci/test/2node_op_test.sh \
             --oneflow_wheel_path=${wheelhouse_dir}
       - name: Print backtrace (distributed test)
         if: always() && matrix.test_suite == 'cuda'
