--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -360,8 +360,8 @@ jobs:
         if: always() && matrix.test_suite == 'cuda'
         uses: ./.github/actions/upload_oss
         with:
-          src_path: oneflow_temp
-          oss_dst_path: oss://oneflow-log/${{ github.repository }}/pr/${{ github.event.pull_request.number }}/${{github.run_id}}/oneflow_temp
+          src_path: distributed-tmp
+          oss_dst_path: oss://oneflow-log/${{ github.repository }}/pr/${{ github.event.pull_request.number }}/${{github.run_id}}/distributed-tmp
           oss_access_key_id: ${{ secrets.OSS_ACCESS_KEY_ID }}
           oss_access_key_secret: ${{ secrets.OSS_ACCESS_KEY_SECRET }}
       - name: Dry run test (run without runtime)
