--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ option(BUILD_CUDA "" ON)
 option(BUILD_TESTING "" ON)
 option(WITH_XLA "Option to build with XLA" OFF)
 option(WITH_TENSORRT "Option to build with TensorRT" OFF)
+option(WITH_COCOAPI "Option to build with COCO API" ON)
 option(FOR_CI "" OFF)
 option(BUILD_GIT_VERSION "" ON)
 option(BUILD_PROFILER "" OFF)
@@ -60,6 +61,9 @@ if (WITH_XLA)
 endif()
 if (WITH_TENSORRT)
   add_definitions(-DWITH_TENSORRT)
+endif()
+if (WITH_COCOAPI)
+  add_definitions(-DWITH_COCOAPI)
 endif()
 if (USE_CXX11_ABI)
   add_definitions(-D_GLIBCXX_USE_CXX11_ABI=1)
