add default for apple

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,12 @@ option(BUILD_PROFILER "" OFF)
 set(RPC_BACKEND "GRPC,LOCAL" CACHE STRING "")
 set(THIRD_PARTY_MIRROR "" CACHE STRING "")
 
+if (APPLE)
+  set(RPC_BACKEND "LOCAL")
+  set(BUILD_CUDA OFF)
+  set(WITH_COCOAPI OFF)
+endif()
+
 if (CMAKE_BUILD_TYPE MATCHES Debug)
   set(CUDNN_STATIC OFF CACHE BOOL "")
 else ()
