optimize softmax warp impl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ option(WITH_TENSORRT "Option to build with TensorRT" OFF)
 option(FOR_CI "" OFF)
 option(BUILD_GIT_VERSION "" ON)
 option(BUILD_PROFILER "" OFF)
+option(OF_SOFTMAX_USE_FAST_MATH "" ON)
 set(RPC_BACKEND "GRPC,LOCAL" CACHE STRING "")
 set(THIRD_PARTY_MIRROR "" CACHE STRING "")
 
@@ -68,6 +69,9 @@ else()
 endif()
 if (BUILD_PROFILER)
   add_definitions(-DOF_ENABLE_PROFILER)
+endif()
+if (OF_SOFTMAX_USE_FAST_MATH)
+  add_definitions(-DOF_SOFTMAX_USE_FAST_MATH)
 endif()
 if (RPC_BACKEND MATCHES "GRPC")
   add_definitions(-DRPC_BACKEND_GRPC)
