--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -2410,5 +2410,5 @@
   bind_python: True
 
 - name: "wkv_grad"
-  signature: "Void (Int64 B, Int64 T, Int64 C, Tensor w, Tensor u, Tensor k, Tensor v, Tensor gy, Tensor gw, Tensor gu, Tensor gk, Tensor gv) => WkvGrad"
+  signature: "TensorTuple (Int64 B, Int64 T, Int64 C, Tensor w, Tensor u, Tensor k, Tensor v, Tensor gy) => WkvGrad"
   bind_python: True
