Support parameter `p` for flow.bernoulli (#8824)
* support p for bernoulli

* refine

* refine unittest

* unify bernoulliProbOp into BernoulliOp

* refine code

* add functor for p supported case

* refine code in kernel

* add doc

* refine code

* rename input name from 'x' to 'input'

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -807,7 +807,8 @@
 - name: "bernoulli"
   signature:
     [
-      "Tensor (Tensor x, *, DataType dtype=kFloat, Generator generator=None) => Bernoulli",
+      "Tensor (Tensor input, *, DataType dtype=kFloat, Generator generator=None) => Bernoulli",
+      "Tensor (Tensor input, Double p, *, DataType dtype=kFloat, Generator generator=None) => Bernoulli",
     ]
   bind_python: True
 
