Add clamp_min/max and inplace version functor (#8850)

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1727,6 +1727,26 @@
     ["Tensor (Tensor input, Scalar min=None, Scalar max=None) => ClampInplace"]
   bind_python: true
 
+- name: "clamp_min"
+  signature:
+    ["Tensor (Tensor input, Scalar min) => ClampMin"]
+  bind_python: true
+
+- name: "clamp_min_"
+  signature:
+    ["Tensor (Tensor input, Scalar min) => ClampMinInplace"]
+  bind_python: true
+
+- name: "clamp_max"
+  signature:
+    ["Tensor (Tensor input, Scalar max) => ClampMax"]
+  bind_python: true
+
+- name: "clamp_max_"
+  signature:
+    ["Tensor (Tensor input, Scalar min) => ClampMaxInplace"]
+  bind_python: true
+
 - name: "clip"
   signature:
     ["Tensor (Tensor input, Scalar min=None, Scalar max=None) => Clip"]
