add mse_loss and ls_loss interface

--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1093,11 +1093,11 @@
   bind_python: True
 
 - name: "l1_loss"
-  signature: "Tensor(Tensor input, Tensor target, String reduction) => L1Loss"
+  signature: "Tensor(Tensor input, Tensor target, String reduction=\"mean\") => L1Loss"
   bind_python: True
 
 - name: "mse_loss"
-  signature: "Tensor(Tensor input, Tensor target, String reduction) => MseLoss"
+  signature: "Tensor(Tensor input, Tensor target, String reduction=\"mean\") => MseLoss"
   bind_python: True
 
 - name: "kl_div_loss"
