--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -1923,6 +1923,43 @@
   signature: "TensorTuple (Tensor x, TensorTuple like, Int64 axis) => StackGrad"
   bind_python: False
 
+- name: "atleast_1d"
+  signature: [
+    "Tensor (Tensor input) => AtLeast1D",
+    "TensorTuple (TensorTuple inputs) => AtLeast1D",
+  ]
+  bind_python: True
+
+- name: "atleast_2d"
+  signature: [
+    "Tensor (Tensor input) => AtLeast2D",
+    "TensorTuple (TensorTuple inputs) => AtLeast2D",
+  ]
+  bind_python: True
+
+- name: "atleast_3d"
+  signature: [
+    "Tensor (Tensor input) => AtLeast3D",
+    "TensorTuple (TensorTuple inputs) => AtLeast3D",
+  ]
+  bind_python: True
+
+- name: "hstack"
+  signature: "Tensor (TensorTuple inputs) => HStack"
+  bind_python: True
+
+- name: "vstack"
+  signature: "Tensor (TensorTuple inputs) => VStack"
+  bind_python: True
+
+- name: "dstack"
+  signature: "Tensor (TensorTuple inputs) => DStack"
+  bind_python: True
+
+- name: "column_stack"
+  signature: "Tensor (TensorTuple inputs) => ColumnStack"
+  bind_python: True
+
 - name: "local_to_global"
   signature: "Tensor (Tensor x, Placement placement, SbpList sbp, Shape shape, DataType dtype, Bool sync_data, Bool copy=False) => LocalToGlobal"
   bind_python: False
