--- a/oneflow/core/functional/functional_api.yaml
+++ b/oneflow/core/functional/functional_api.yaml
@@ -2119,7 +2119,7 @@
   bind_python: True
 
 - name: "pairwise_distance"
-  signature: "Tensor (Tensor x1, Tensor x2, Float p=2.0, Float eps=1e-6, Bool keepdim=False) => PairwiseDistance"
+  signature: "Tensor (Tensor x1, Tensor x2, Float p=2.0, Double eps=1e-6, Bool keepdim=False) => PairwiseDistance"
   bind_python: True
 
 - name: "cosine_similarity"
